# tobi

./: .gitignore  README.md  index.html  main.js  package.json  packages.dhall  spago.dhall
src/: App.purs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/App/: Eval.purs  Types.purs
src/App/Render/: InitModal.purs  ItemList.purs  ItemReader.purs
src/FFI/: DOM.purs  FeedParser.js  FeedParser.purs  Http.purs
src/Model/: Feed.purs  Settings.purs
src/Tobi/: Api.js  Api.purs  Prelude.purs
src/js/: article-reader.js
